# smiles-fp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_env.py  build_smiles_fp.py  build_wheels.py  fastbuild.sh  pyproject.toml  pyproject.toml.j2  setup.py
OLD/: build_smiles_fp.py
cpp/: smiles_fp.cpp
python/smiles_fp_rs/: __init__.py  _smiles_fp_rs.pyi  helpers.py  search.py
smiles_fp/: __init__.py  _smiles_fp.pyi  search.py
src/: lib.rs  rdkit_shim.cpp  rdkit_shim.h
tests/: conftest.py  test_bulk_parallel.py  test_helpers.py  test_save_and_load.py  test_search.py  test_smiles_fp.py
