[package]
name = "smiles_fp_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "_smiles_fp_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
rayon = "1.8"
cxx = "1.0"
memmap2 = "0.9"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
